// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract annotation with inline global regex 1`] = `
{
  "annotations": [
    {
      "name": "Focus",
      "query": "bar",
      "ranges": [
        {
          "fromColumn": 8,
          "lineNumber": 3,
          "toColumn": 8,
        },
        {
          "fromColumn": 16,
          "lineNumber": 3,
          "toColumn": 16,
        },
      ],
    },
  ],
  "code": "const x = 1
const y = 2
const cy = 2 + y;
const fy = 3;",
}
`;

exports[`extract annotation with inline global regex 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "x",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "1",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "c",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "annotationName": "Focus",
          "annotationQuery": "bar",
          "fromColumn": 8,
          "toColumn": 8,
          "tokens": [
            {
              "content": "y",
              "style": {
                "color": "#4FC1FF",
              },
            },
          ],
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": " + ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "annotationName": "Focus",
          "annotationQuery": "bar",
          "fromColumn": 16,
          "toColumn": 16,
          "tokens": [
            {
              "content": "y",
              "style": {
                "color": "#9CDCFE",
              },
            },
          ],
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
    {
      "lineNumber": 4,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "fy",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "3",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annotation with inline regex 1`] = `
{
  "annotations": [
    {
      "name": "Focus",
      "query": "bar",
      "ranges": [
        {
          "fromColumn": 8,
          "lineNumber": 3,
          "toColumn": 8,
        },
      ],
    },
  ],
  "code": "const x = 1
const y = 2
const cy = 2 + y;
const fy = 3;",
}
`;

exports[`extract annotation with inline regex 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "x",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "1",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "c",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "annotationName": "Focus",
          "annotationQuery": "bar",
          "fromColumn": 8,
          "toColumn": 8,
          "tokens": [
            {
              "content": "y",
              "style": {
                "color": "#4FC1FF",
              },
            },
          ],
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": " + ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#9CDCFE",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
    {
      "lineNumber": 4,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "fy",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "3",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annotation with multiline inline regex 1`] = `
{
  "annotations": [
    {
      "name": "Fold",
      "query": "q",
      "ranges": [
        {
          "fromColumn": 26,
          "lineNumber": 2,
          "toColumn": 35,
        },
        {
          "fromColumn": 22,
          "lineNumber": 3,
          "toColumn": 34,
        },
        {
          "fromColumn": 51,
          "lineNumber": 3,
          "toColumn": 51,
        },
      ],
    },
  ],
  "code": "function C() {
  return <div className="bg-red-500">
    <span className="text-blue-500"><a className="x">Hello</a></span>
  </div>
}",
}
`;

exports[`extract annotation with multiline inline regex 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "function ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "C",
          "style": {
            "color": "#DCDCAA",
          },
        },
        {
          "content": "() {",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "  return ",
          "style": {
            "color": "#C586C0",
          },
        },
        {
          "content": "<",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "div ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "className",
          "style": {
            "color": "#9CDCFE",
          },
        },
        {
          "content": "=",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": """,
          "style": {
            "color": "#CE9178",
          },
        },
        {
          "annotationName": "Fold",
          "annotationQuery": "q",
          "fromColumn": 26,
          "toColumn": 35,
          "tokens": [
            {
              "content": "bg-red-500",
              "style": {
                "color": "#CE9178",
              },
            },
          ],
        },
        {
          "content": """,
          "style": {
            "color": "#CE9178",
          },
        },
        {
          "content": ">",
          "style": {
            "color": "#808080",
          },
        },
      ],
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "    <",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "span ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "className",
          "style": {
            "color": "#9CDCFE",
          },
        },
        {
          "content": "=",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": """,
          "style": {
            "color": "#CE9178",
          },
        },
        {
          "annotationName": "Fold",
          "annotationQuery": "q",
          "fromColumn": 22,
          "toColumn": 34,
          "tokens": [
            {
              "content": "text-blue-500",
              "style": {
                "color": "#CE9178",
              },
            },
          ],
        },
        {
          "content": """,
          "style": {
            "color": "#CE9178",
          },
        },
        {
          "content": "><",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "a ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "className",
          "style": {
            "color": "#9CDCFE",
          },
        },
        {
          "content": "=",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": """,
          "style": {
            "color": "#CE9178",
          },
        },
        {
          "annotationName": "Fold",
          "annotationQuery": "q",
          "fromColumn": 51,
          "toColumn": 51,
          "tokens": [
            {
              "content": "x",
              "style": {
                "color": "#CE9178",
              },
            },
          ],
        },
        {
          "content": """,
          "style": {
            "color": "#CE9178",
          },
        },
        {
          "content": ">",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "Hello",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "</",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "a",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "></",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "span",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": ">",
          "style": {
            "color": "#808080",
          },
        },
      ],
    },
    {
      "lineNumber": 4,
      "tokens": [
        {
          "content": "  </",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "div",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": ">",
          "style": {
            "color": "#808080",
          },
        },
      ],
    },
    {
      "lineNumber": 5,
      "tokens": [
        {
          "content": "}",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annottations 1`] = `
{
  "annotations": [
    {
      "name": "foo",
      "query": "",
      "ranges": [
        {
          "fromLineNumber": 2,
          "toLineNumber": 2,
        },
      ],
    },
  ],
  "code": "const x = 1;
const y = 2;",
}
`;

exports[`extract annottations 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "x",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "1",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
    {
      "annotationName": "foo",
      "annotationQuery": "",
      "fromLineNumber": 2,
      "lines": [
        {
          "lineNumber": 2,
          "tokens": [
            {
              "content": "const ",
              "style": {
                "color": "#569CD6",
              },
            },
            {
              "content": "y",
              "style": {
                "color": "#4FC1FF",
              },
            },
            {
              "content": " = ",
              "style": {
                "color": "#D4D4D4",
              },
            },
            {
              "content": "2",
              "style": {
                "color": "#B5CEA8",
              },
            },
            {
              "content": ";",
              "style": {
                "color": "#D4D4D4",
              },
            },
          ],
        },
      ],
      "toLineNumber": 2,
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annottations from jsx 1`] = `
{
  "annotations": [
    {
      "name": "foo",
      "query": "",
      "ranges": [
        {
          "fromColumn": 3,
          "lineNumber": 2,
          "toColumn": 5,
        },
      ],
    },
  ],
  "code": "const x = <div>
  hey
</div>",
}
`;

exports[`extract annottations from jsx 2`] = `
{
  "lang": "jsx",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "x",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "<",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "div",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": ">",
          "style": {
            "color": "#808080",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "  ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "annotationName": "foo",
          "annotationQuery": "",
          "fromColumn": 3,
          "toColumn": 5,
          "tokens": [
            {
              "content": "hey",
              "style": {
                "color": "#D4D4D4",
              },
            },
          ],
        },
      ],
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "</",
          "style": {
            "color": "#808080",
          },
        },
        {
          "content": "div",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": ">",
          "style": {
            "color": "#808080",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annottations from mdx 1`] = `
{
  "annotations": [
    {
      "name": "foo",
      "query": "",
      "ranges": [
        {
          "fromColumn": 3,
          "lineNumber": 1,
          "toColumn": 5,
        },
      ],
    },
  ],
  "code": "# Hi there
{/* bar */}",
}
`;

exports[`extract annottations from mdx 2`] = `
{
  "lang": "mdx",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "# ",
          "style": {
            "color": "#569CD6",
            "fontWeight": "bold",
          },
        },
        {
          "annotationName": "foo",
          "annotationQuery": "",
          "fromColumn": 3,
          "toColumn": 5,
          "tokens": [
            {
              "content": "Hi ",
              "style": {
                "color": "#569CD6",
                "fontWeight": "bold",
              },
            },
          ],
        },
        {
          "content": "there",
          "style": {
            "color": "#569CD6",
            "fontWeight": "bold",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "{",
          "style": {
            "color": "#CE9178",
          },
        },
        {
          "content": "/* bar */",
          "style": {
            "color": "#6A9955",
          },
        },
        {
          "content": "}",
          "style": {
            "color": "#CE9178",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annottations from text 1`] = `
{
  "annotations": [],
  "code": "const x = 1;
// foo[3:5]
const y = 2;",
}
`;

exports[`extract annottations from text 2`] = `
{
  "lang": "text",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const x = 1;",
          "style": {},
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "// foo[3:5]",
          "style": {},
        },
      ],
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "const y = 2;",
          "style": {},
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annottations from txt 1`] = `
{
  "annotations": [
    {
      "name": "foo",
      "query": "",
      "ranges": [
        {
          "fromColumn": 3,
          "lineNumber": 2,
          "toColumn": 5,
        },
      ],
    },
  ],
  "code": "const x = 1;
const y = 2;",
}
`;

exports[`extract annottations from txt 2`] = `
{
  "lang": "txt",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const x = 1;",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "co",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "annotationName": "foo",
          "annotationQuery": "",
          "fromColumn": 3,
          "toColumn": 5,
          "tokens": [
            {
              "content": "nst",
              "style": {
                "color": "#D4D4D4",
              },
            },
          ],
        },
        {
          "content": " y = 2;",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract annottations with prefix 1`] = `
{
  "annotations": [
    {
      "name": "xy",
      "query": "bar",
      "ranges": [
        {
          "fromColumn": 3,
          "lineNumber": 3,
          "toColumn": 5,
        },
      ],
    },
  ],
  "code": "// xyz[3:5] foo
const x = 1;
const y = 2;",
}
`;

exports[`extract annottations with prefix 2`] = `
{
  "lang": "jsx",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "// xyz[3:5] foo",
          "style": {
            "color": "#6A9955",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "x",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "1",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "co",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "annotationName": "xy",
          "annotationQuery": "bar",
          "fromColumn": 3,
          "toColumn": 5,
          "tokens": [
            {
              "content": "nst",
              "style": {
                "color": "#569CD6",
              },
            },
          ],
        },
        {
          "content": " ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract empty annotation with inline regex 1`] = `
{
  "annotations": [],
  "code": "const x = 1
const y = 2
const c = 2;
const fy = 3;",
}
`;

exports[`extract empty annotation with inline regex 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "x",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "1",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "c",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
    {
      "lineNumber": 4,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "fy",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "3",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract empty line annotation with regex 1`] = `
{
  "annotations": [],
  "code": "const y = 2
const c = 2;",
}
`;

exports[`extract empty line annotation with regex 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "c",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract line annotation with global regex 1`] = `
{
  "annotations": [
    {
      "name": "Focus",
      "query": "bar",
      "ranges": [
        {
          "fromLineNumber": 3,
          "toLineNumber": 3,
        },
        {
          "fromLineNumber": 4,
          "toLineNumber": 4,
        },
      ],
    },
  ],
  "code": "const x = 1
const y = 2
const cy = 2 + y;
const fy = 3;",
}
`;

exports[`extract line annotation with global regex 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "x",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "1",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "lineNumber": 2,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "annotationName": "Focus",
      "annotationQuery": "bar",
      "fromLineNumber": 3,
      "lines": [
        {
          "lineNumber": 3,
          "tokens": [
            {
              "content": "const ",
              "style": {
                "color": "#569CD6",
              },
            },
            {
              "content": "cy",
              "style": {
                "color": "#4FC1FF",
              },
            },
            {
              "content": " = ",
              "style": {
                "color": "#D4D4D4",
              },
            },
            {
              "content": "2",
              "style": {
                "color": "#B5CEA8",
              },
            },
            {
              "content": " + ",
              "style": {
                "color": "#D4D4D4",
              },
            },
            {
              "content": "y",
              "style": {
                "color": "#9CDCFE",
              },
            },
            {
              "content": ";",
              "style": {
                "color": "#D4D4D4",
              },
            },
          ],
        },
      ],
      "toLineNumber": 3,
    },
    {
      "annotationName": "Focus",
      "annotationQuery": "bar",
      "fromLineNumber": 4,
      "lines": [
        {
          "lineNumber": 4,
          "tokens": [
            {
              "content": "const ",
              "style": {
                "color": "#569CD6",
              },
            },
            {
              "content": "fy",
              "style": {
                "color": "#4FC1FF",
              },
            },
            {
              "content": " = ",
              "style": {
                "color": "#D4D4D4",
              },
            },
            {
              "content": "3",
              "style": {
                "color": "#B5CEA8",
              },
            },
            {
              "content": ";",
              "style": {
                "color": "#D4D4D4",
              },
            },
          ],
        },
      ],
      "toLineNumber": 4,
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`extract line annotation with regex 1`] = `
{
  "annotations": [
    {
      "name": "Focus",
      "query": "bar",
      "ranges": [
        {
          "fromLineNumber": 2,
          "toLineNumber": 2,
        },
      ],
    },
  ],
  "code": "const y = 2
const cy = 2;
const fy = 3;",
}
`;

exports[`extract line annotation with regex 2`] = `
{
  "lang": "javascript",
  "lines": [
    {
      "lineNumber": 1,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "y",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "2",
          "style": {
            "color": "#B5CEA8",
          },
        },
      ],
    },
    {
      "annotationName": "Focus",
      "annotationQuery": "bar",
      "fromLineNumber": 2,
      "lines": [
        {
          "lineNumber": 2,
          "tokens": [
            {
              "content": "const ",
              "style": {
                "color": "#569CD6",
              },
            },
            {
              "content": "cy",
              "style": {
                "color": "#4FC1FF",
              },
            },
            {
              "content": " = ",
              "style": {
                "color": "#D4D4D4",
              },
            },
            {
              "content": "2",
              "style": {
                "color": "#B5CEA8",
              },
            },
            {
              "content": ";",
              "style": {
                "color": "#D4D4D4",
              },
            },
          ],
        },
      ],
      "toLineNumber": 2,
    },
    {
      "lineNumber": 3,
      "tokens": [
        {
          "content": "const ",
          "style": {
            "color": "#569CD6",
          },
        },
        {
          "content": "fy",
          "style": {
            "color": "#4FC1FF",
          },
        },
        {
          "content": " = ",
          "style": {
            "color": "#D4D4D4",
          },
        },
        {
          "content": "3",
          "style": {
            "color": "#B5CEA8",
          },
        },
        {
          "content": ";",
          "style": {
            "color": "#D4D4D4",
          },
        },
      ],
    },
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`highlight html with theme 1`] = `
{
  "lang": "html",
  "lines": [
    [
      {
        "content": "<",
        "style": {
          "color": "#C9D1D9",
        },
      },
      {
        "content": "script",
        "style": {
          "color": "#7EE787",
        },
      },
      {
        "content": "> ",
        "style": {
          "color": "#C9D1D9",
        },
      },
      {
        "content": "const ",
        "style": {
          "color": "#FF7B72",
        },
      },
      {
        "content": "x ",
        "style": {
          "color": "#79C0FF",
        },
      },
      {
        "content": "= ",
        "style": {
          "color": "#FF7B72",
        },
      },
      {
        "content": "1 ",
        "style": {
          "color": "#79C0FF",
        },
      },
      {
        "content": "</",
        "style": {
          "color": "#FF7B72",
        },
      },
      {
        "content": "script",
        "style": {
          "color": "#C9D1D9",
        },
      },
      {
        "content": ">",
        "style": {
          "color": "#FF7B72",
        },
      },
    ],
  ],
  "style": {
    "background": "#0d1117",
    "color": "#c9d1d9",
  },
}
`;

exports[`highlight js 1`] = `
{
  "lang": "javascript",
  "lines": [
    [
      {
        "content": "x",
        "style": {
          "color": "#9CDCFE",
        },
      },
      {
        "content": " = ",
        "style": {
          "color": "#D4D4D4",
        },
      },
      {
        "content": "1",
        "style": {
          "color": "#B5CEA8",
        },
      },
    ],
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`highlight terminal 1`] = `
{
  "lang": "terminal",
  "lines": [
    [
      {
        "content": "Foo",
        "style": {},
      },
    ],
  ],
  "style": {
    "background": "#0d1117",
    "color": "#c9d1d9",
  },
}
`;

exports[`highlight terminal ansi codes 1`] = `
{
  "lang": "terminal",
  "lines": [
    [
      {
        "content": " ",
        "style": {
          "background": "#3fb950",
        },
      },
      {
        "content": "astro",
        "style": {
          "background": "#3fb950",
          "color": "#484f58",
        },
      },
      {
        "content": " ",
        "style": {
          "background": "#3fb950",
        },
      },
      {
        "content": "  ",
        "style": {},
      },
      {
        "content": "v2.9.2",
        "style": {
          "color": "#3fb950",
          "fontWeight": "bold",
        },
      },
      {
        "content": " ",
        "style": {},
      },
      {
        "content": "Launch sequence.",
        "style": {
          "fontWeight": "bold",
        },
      },
      {
        "content": "",
        "style": {
          "fontWeight": "bold",
        },
      },
    ],
  ],
  "style": {
    "background": "#0d1117",
    "color": "#c9d1d9",
  },
}
`;

exports[`highlight text 1`] = `
{
  "lang": "text",
  "lines": [
    [
      {
        "content": "x = 1",
        "style": {},
      },
    ],
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`highlight with empty theme 1`] = `
{
  "lang": "javascript",
  "lines": [
    [
      {
        "content": "x = 1",
        "style": {
          "color": "#BBBBBB",
        },
      },
    ],
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#bbbbbb",
  },
}
`;

exports[`highlight with frozen theme 1`] = `
{
  "lang": "javascript",
  "lines": [
    [
      {
        "content": "x = 1",
        "style": {
          "color": "#BBBBBB",
        },
      },
    ],
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#bbbbbb",
  },
}
`;

exports[`highlight with frozen theme with global setting 1`] = `
{
  "lang": "javascript",
  "lines": [
    [
      {
        "content": "x = 1",
        "style": {
          "color": "#BBBBBB",
        },
      },
    ],
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#bbbbbb",
  },
}
`;

exports[`highlight with scopes 1`] = `
{
  "lang": "javascript",
  "lines": [
    [
      {
        "content": "x",
        "scopes": [
          "variable.other.readwrite.js",
          "source.js",
        ],
        "style": {
          "color": "#C9D1D9",
        },
      },
      {
        "content": " ",
        "scopes": [
          "source.js",
        ],
        "style": {
          "color": "#C9D1D9",
        },
      },
      {
        "content": "=",
        "scopes": [
          "keyword.operator.assignment.js",
          "source.js",
        ],
        "style": {
          "color": "#FF7B72",
        },
      },
      {
        "content": " ",
        "scopes": [
          "source.js",
        ],
        "style": {
          "color": "#C9D1D9",
        },
      },
      {
        "content": "1",
        "scopes": [
          "constant.numeric.decimal.js",
          "source.js",
        ],
        "style": {
          "color": "#79C0FF",
        },
      },
    ],
  ],
  "style": {
    "background": "#0d1117",
    "color": "#c9d1d9",
  },
}
`;

exports[`null code 1`] = `
{
  "lang": "javascript",
  "lines": [
    [
      {
        "content": "",
        "style": {
          "color": "#D4D4D4",
        },
      },
    ],
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;

exports[`null lang 1`] = `
{
  "lang": "text",
  "lines": [
    [
      {
        "content": "x = 1",
        "style": {},
      },
    ],
  ],
  "style": {
    "background": "#1E1E1E",
    "color": "#D4D4D4",
  },
}
`;
